--- a/index.html
+++ b/index.html
@@ -1,40 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
 
-	<head>
-		<meta charset="UTF-8">
-		<title>Math Game</title>
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes">
-		<link rel="stylesheet" href="css/style.css">
-	</head>
+    <head>
+        <meta charset="UTF-8">
+        <title>Math Game</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes">
+        <link rel="stylesheet" href="css/style.css">
+    </head>
 
-	<body>
-		<div id="container">
-			<div id="score">
-				Score : <span>0</span>
-			</div>
-			<div id="correct">
-				Correct
-			</div>
-			<div id="wrong">
-				Try Again
-			</div>
-			<div id="question">
-				7x9
-			</div>
-			<div id="instruction">
-				Click on the Correct Answer
-			</div>
-			<div id="choices">
-				<div id="box1" class="box">40</div>
-				<div id="box2" class="box">40</div>
-				<div id="box3" class="box">40</div>
-				<div id="box4" class="box">40</div>
-			</div>
-		</div>
+    <body>
+        <h1>The Math Game</h1>
+        <div id="container">
+            <div id="score">
+                Score : <span>0</span>
+            </div>
+            <div id="correct">
+                Correct
+            </div>
+            <div id="wrong">
+                Try Again
+            </div>
+            <div id="question">
+                7x9
+            </div>
+            <div id="instruction">
+                Click on the Correct Answer
+            </div>
+            <div id="choices">
+                <div id="box1" class="box">40</div>
+                <div id="box2" class="box">40</div>
+                <div id="box3" class="box">40</div>
+                <div id="box4" class="box">40</div>
+            </div>
+            <div id="startreset">
+                Start Game
+            </div>
+            <div id="timeremaining">
+                Time remaining :
+                <span id="timeremainingvalue">60</span>
+                sec
+            </div>
+        </div>
 
-		<!-- script -->
-		<script type="text/javascript" src="js/script.js"></script>
-	</body>
+        <!-- script -->
+        <script type="text/javascript" src="js/script.js"></script>
+    </body>
 
 </html>
