--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
                 Try Again
             </div>
             <div id="question">
-                7x9
+
             </div>
             <div id="instruction">
                 Click on the Correct Answer
             </div>
             <div id="choices">
-                <div id="box1" class="box">40</div>
-                <div id="box2" class="box">40</div>
-                <div id="box3" class="box">40</div>
-                <div id="box4" class="box">40</div>
+                <div id="box1" class="box"></div>
+                <div id="box2" class="box"></div>
+                <div id="box3" class="box"></div>
+                <div id="box4" class="box"></div>
             </div>
             <div id="startreset">
                 Start Game
@@ -39,6 +39,8 @@
                 Time remaining :
                 <span id="timeremainingvalue">60</span>
                 sec
+            </div>
+            <div id="gameOver">
             </div>
         </div>
 
