--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>The Math Game</h1>
         <div id="container">
             <div id="score">
-                Score : <span>0</span>
+                Score : <span id="scorevalue">0</span>
             </div>
             <div id="correct">
                 Correct
